--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -18,4 +18,19 @@
             xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
             android:title="@string/battery_options_title" >
 
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="status_bar_battery_style"
+            android:title="@string/status_bar_battery_style_title"
+            android:summary="%s"
+            android:entries="@array/status_bar_battery_style_entries"
+            android:entryValues="@array/status_bar_battery_style_values"
+            android:defaultValue="0" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="status_bar_show_battery_percent"
+            android:title="@string/battery_percentage_title"
+            android:entries="@array/status_bar_battery_percentage_entries"
+            android:entryValues="@array/status_bar_battery_percentage_values"
+            android:defaultValue="0" />
+
 </PreferenceScreen>
