--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -30,6 +30,12 @@
             android:summary="@string/vibration_on_charge_state_changed_summary"
             android:defaultValue="true" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
+            android:key="charging_animation"
+            android:title="@string/charging_animation_title"
+            android:summary="@string/charging_animation_summary"
+            android:defaultValue="false" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="screenshot_type"
             android:entries="@array/screenshot_type_entries"
