--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -37,6 +37,20 @@
             android:summary="@string/qs_running_services_summary"
             android:defaultValue="false" />
 
+    <PreferenceCategory
+        android:key="qs_theme_category"
+        android:title="@string/qs_theme_category">
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
+            android:key="qs_panel_bg_alpha"
+            android:title="@string/qs_panel_alpha_title"
+            android:max="255"
+            settings:min="100"
+            settings:interval="5"
+            android:defaultValue="255" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory 
         android:key="qs_layout_category" 
         android:title="@string/qs_layout_category"> 
