--- a/res/layout/app_grid_item.xml
+++ b/res/layout/app_grid_item.xml
@@ -25,6 +25,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:background="?android:attr/selectableItemBackground"
         android:scaleType="centerInside" />
 </RelativeLayout>
