--- a/res/layout/preference_app_list.xml
+++ b/res/layout/preference_app_list.xml
@@ -27,6 +27,7 @@
         android:id="@+id/app_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/alert_dialog_padding_material"
         android:divider="@null" />
 </LinearLayout>
 
