--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -25,6 +25,12 @@
             android:summary="@string/battery_light_settings_summary"
             android:defaultValue="true" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_show_battery_estimate"
+            android:title="@string/qs_show_battery_estimate_title"
+            android:summary="@string/qs_show_battery_estimate_summary"
+            android:defaultValue="true"/>
+
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="status_bar_battery_style"
             android:title="@string/status_bar_battery_style_title"
