--- a/res/xml/signal_icon_switch.xml
+++ b/res/xml/signal_icon_switch.xml
@@ -30,6 +30,15 @@
             android:summary="@string/volte_icon_summary"
             android:defaultValue="true"/>
 
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="volte_icon_style"
+            android:title="@string/volte_icon_style_title"
+            android:entries="@array/volte_icon_type_entries"
+            android:entryValues="@array/volte_icon_type_values"
+            android:dependency="show_volte_icon"
+            android:summary="%s"
+            android:defaultValue="0"/>
+
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="roaming_indicator_icon"
             android:title="@string/roaming_indicator_icon_title"
