--- a/res/xml/signal_icon_switch.xml
+++ b/res/xml/signal_icon_switch.xml
@@ -42,9 +42,8 @@
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/> 
 
-        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        <SwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/use_old_mobiletype_title"
-            android:summary="@string/use_old_mobiletype_summary"
-            android:defaultValue="false" />
+            android:summary="@string/use_old_mobiletype_summary" />
 </PreferenceScreen>
