--- a/res/xml/signal_icon_switch.xml
+++ b/res/xml/signal_icon_switch.xml
@@ -54,5 +54,6 @@
         <SwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/use_old_mobiletype_title"
-            android:summary="@string/use_old_mobiletype_summary" />
+            android:summary="@string/use_old_mobiletype_summary"
+            android:defaultValue="false"/>
 </PreferenceScreen>
