--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -46,4 +46,8 @@
         <item name="android:topLeftRadius">@*android:dimen/config_dialogCornerRadius</item>
     </style>
 
+    <style name="preference_icon_frame">
+        <item name="android:layout_marginStart">-4dp</item>
+        <item name="android:minWidth">60dp</item>
+    </style>
 </resources>
