--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -88,6 +88,31 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="aspect_ratio_category"
+        android:title="@string/aspect_ratio_category_title">
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="aspect_ratio_apps_enabled"
+            android:title="@string/aspect_ratio_apps_enabled_title"
+            android:summary="@string/aspect_ratio_apps_enabled_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.tweaks.preferences.AppMultiSelectListPreference
+            android:key="aspect_ratio_apps_list"
+            android:title="@string/aspect_ratio_apps_list_title"
+            android:summary="@string/aspect_ratio_apps_list_summary"
+            android:dependency="aspect_ratio_apps_enabled"
+            android:persistent="false" />
+
+        <com.dirtyunicorns.tweaks.preferences.ScrollAppsViewPreference
+            android:key="aspect_ratio_apps_list_scroller"
+            android:dependency="aspect_ratio_apps_enabled"
+            android:persistent="false"
+            android:selectable="false" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/dashboard_stuff" >
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference 
