--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -43,6 +43,15 @@
             android:summary="@string/enable_fc_notifications_summary" 
             android:defaultValue="true" /> 
 
+        <!-- Flashlight on incoming calls -->
+        <ListPreference
+            android:key="flashlight_on_call"
+            android:title="@string/flashlight_on_call_title"
+            android:entries="@array/flashlight_on_call_entries"
+            android:entryValues="@array/flashlight_on_call_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+
     <PreferenceCategory
         android:key="notification_lights"
         android:title="@string/notification_lights">
