--- a/res/xml/notifications.xml
+++ b/res/xml/notifications.xml
@@ -62,6 +62,16 @@
             android:summary="@string/pulse_ambient_light_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="pulse_ambient_light_duration"
+            android:title="@string/pulse_ambient_light_duration_title"
+            android:persistent="false"
+            android:defaultValue="2"
+            android:max="10"
+            settings:min="1"
+            settings:units="sec"
+            android:dependency="pulse_ambient_light" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="pulse_ambient_auto_color"
             android:title="@string/pulse_ambient_auto_color_title"
@@ -72,7 +82,6 @@
         <com.dirtyunicorns.support.colorpicker.ColorPickerPreference
             android:key="pulse_ambient_light_color"
             android:title="@string/pulse_ambient_light_color_title"
-            android:persistent="false"
             android:dependency="pulse_ambient_light"
             settings:defaultColorValue="0xFF3980FF" />
 
