--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -35,41 +35,45 @@
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
     </Preference>
 
-    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
-        android:key="status_bar_locked_on_secure_keyguard"
-        android:title="@string/lockscreen_qs_disabled_title"
-        android:summary="@string/lockscreen_qs_disabled_summary"
-        android:defaultValue="false" />
+    <PreferenceCategory
+        android:title="@string/switch_settings_title" >
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="hide_lockscreen_status_bar"
-        android:title="@string/hide_lockscreen_status_bar_title"
-        android:summary="@string/hide_lockscreen_status_bar_summary"
-        android:defaultValue="false" />
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="status_bar_locked_on_secure_keyguard"
+            android:title="@string/lockscreen_qs_disabled_title"
+            android:summary="@string/lockscreen_qs_disabled_summary"
+            android:defaultValue="false" />
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="double_tap_sleep_lockscreen"
-        android:title="@string/double_tap_to_sleep_lockscreen_title"
-        android:summary="@string/double_tap_to_sleep_lockscreen_summary"
-        android:defaultValue="false" />
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="hide_lockscreen_status_bar"
+            android:title="@string/hide_lockscreen_status_bar_title"
+            android:summary="@string/hide_lockscreen_status_bar_summary"
+            android:defaultValue="false" />
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="lockscreen_battery_info"
-        android:title="@string/lockscreen_battery_info_title"
-        android:summary="@string/lockscreen_battery_info_summary"
-        android:defaultValue="false" />
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_lockscreen"
+            android:title="@string/double_tap_to_sleep_lockscreen_title"
+            android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+            android:defaultValue="false" />
 
-    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference 
-	android:key="hide_lock_shortcuts" 
-	android:title="@string/lockscreen_hide_shortcuts_title" 
-	android:summary="@string/lockscreen_hide_shortcuts_summary" 
-	android:defaultValue="false" />
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_battery_info"
+            android:title="@string/lockscreen_battery_info_title"
+            android:summary="@string/lockscreen_battery_info_summary"
+            android:defaultValue="false" />
 
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
-        android:key="pocket_judge"
-        android:title="@string/pocket_judge_title"
-        android:summary="@string/pocket_judge_summary"
-        android:defaultValue="false" />
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference 
+            android:key="hide_lock_shortcuts" 
+            android:title="@string/lockscreen_hide_shortcuts_title" 
+            android:summary="@string/lockscreen_hide_shortcuts_summary" 
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="pocket_judge"
+            android:title="@string/pocket_judge_title"
+            android:summary="@string/pocket_judge_summary"
+            android:defaultValue="false" />
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="lockscreen_media_category"
