--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -17,11 +17,13 @@
     android:title="@string/gaming_mode_title">
 
     <!-- Heads up -->
-    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+    <com.dirtyunicorns.support.preferences.SystemSettingListPreference
         android:key="gaming_mode_headsup_toggle"
         android:title="@string/gaming_mode_headsup_title"
-        android:summary="@string/gaming_mode_headsup_summary"
-        android:defaultValue="true" />
+        android:entries="@array/gaming_mode_headsup_toggle_entries"
+        android:entryValues="@array/gaming_mode_headsup_toggle_values"
+        android:summary="%s"
+        android:defaultValue="1" />
 
     <!-- Manual brightness -->
     <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
