--- a/res/xml/powermenu.xml
+++ b/res/xml/powermenu.xml
@@ -48,6 +48,11 @@
         android:title="@string/powermenu_screenshot_title"
         android:defaultValue="true" />
 
+    <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+        android:key="screenrecord_in_power_menu"
+        android:title="@string/powermenu_screenrecord_title"
+        android:defaultValue="false" />
+
     <SwitchPreference
         android:key="powermenu_torch"
         android:title="@string/powermenu_torch"
