--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -38,6 +38,11 @@
             android:summary="@string/quick_settings_vibrate_summary"
             android:defaultValue="false"/>
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="dismiss_all_button"
+            android:title="@string/enable_clear_all_button"
+            android:summary="@string/enable_clear_all_button_summary"
+            android:defaultValue="true" />
 
     <PreferenceCategory
         android:key="qs_footer"
