--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -85,6 +85,12 @@
             android:summary="@string/status_bar_custom_header_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_blur"
+            android:title="@string/blur_quicksettings"
+            android:summary="@string/blur_quicksettings_subtitle"
+            android:defaultValue="true" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
             android:key="qs_panel_bg_alpha"
             android:title="@string/qs_panel_alpha_title"
