--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -42,11 +42,29 @@
 
 
     <!-- FOD icon picker -->
-    <Preference
-        android:key="fod_icon_picker_category"
-        android:title="@string/fod_icon_picker_title"
-        android:summary="@string/fod_icon_picker_summary"
-        android:fragment="com.dirtyunicorns.tweaks.fragments.FODIconPickerFragment" />
+    <PreferenceCategory
+        android:key="fod_icon_picker"
+        android:title="@string/fod_icon_picker_title">
+
+        <Preference
+            android:key="fod_icon_picker_category"
+            android:title="@string/fod_icon_picker_title"
+            android:summary="@string/fod_icon_picker_summary"
+            android:fragment="com.dirtyunicorns.tweaks.fragments.FODIconPickerFragment" />
+
+        <com.dirtyunicorns.support.preferences.SystemSettingListPreference
+            android:key="fod_pressed_state"
+            android:dialogTitle="@string/fod_pressed_state_title"
+            android:title="@string/fod_pressed_state_title"
+            android:summary="@string/fod_pressed_state_summary"
+            android:entries="@array/fod_pressed_state_entries"
+            android:entryValues="@array/fod_pressed_state_values"
+            android:defaultValue="0" />
+
+        <Preference
+            android:summary="@string/fod_pressed_state_footer" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:title="@string/switch_settings_title" >
