--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -46,6 +46,12 @@
             android:summary="@string/hide_lockscreen_status_bar_summary"
             android:defaultValue="false" />
 
+        <com.dirtyunicorns.support.preferences.SecureSettingSwitchPreference
+            android:key="hide_lockicon"
+            android:title="@string/hide_lockicon_title"
+            android:summary="@string/hide_lockicon_summary"
+            android:defaultValue="true" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="double_tap_sleep_lockscreen"
             android:title="@string/double_tap_to_sleep_lockscreen_title"
