--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -748,6 +748,7 @@
         <item>@string/lockscreen_clock_sammy_accent_hour</item>
         <item>@string/lockscreen_clock_sammy_accent_mins</item>
         <item>@string/lockscreen_clock_text</item>
+        <item>@string/lockscreen_clock_analog_style</item>
     </string-array>
 
     <string-array name="lockscreen_clock_values">
@@ -759,6 +760,7 @@
         <item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
      <!-- Lockscreen date styles -->
