--- a/res/xml/quick_settings.xml
+++ b/res/xml/quick_settings.xml
@@ -91,6 +91,15 @@
             android:summary="@string/blur_quicksettings_subtitle"
             android:defaultValue="true" />
 
+        <com.dirtyunicorns.support.preferences.CustomSeekBarPreference
+            android:key="qs_blur_alpha"
+            android:title="@string/qs_blur_alpha_title"
+            android:summary="@string/qs_blur_alpha_summary"
+            android:max="100"
+            settings:min="1"
+            android:persistent="false"
+            android:dependency="qs_blur" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
             android:key="qs_panel_bg_alpha"
             android:title="@string/qs_panel_alpha_title"
