--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -52,6 +52,13 @@
             android:summary="@string/fod_icon_picker_summary"
             android:fragment="com.dirtyunicorns.tweaks.fragments.FODIconPickerFragment" />
 
+        <!-- FOD recognizing animation -->
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="fod_recognizing_animation"
+            android:title="@string/fod_recog_animation"
+            android:summary="@string/fod_recog_animation_summary"
+            android:defaultValue="false" />
+
         <com.dirtyunicorns.support.preferences.SystemSettingListPreference
             android:key="fod_pressed_state"
             android:dialogTitle="@string/fod_pressed_state_title"
