--- a/res/xml/heads_up_options.xml
+++ b/res/xml/heads_up_options.xml
@@ -36,6 +36,12 @@
         android:summary="@string/less_boring_heads_up_summary"
         android:defaultValue="false" />
 
+    <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+        android:key="show_media_heads_up"
+        android:title="@string/show_media_heads_up_title"
+        android:summary="@string/show_media_heads_up_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory
             android:title="@string/heads_up_stoplist_title"
             android:key="stoplist_applications" >
