--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -41,6 +41,12 @@
         android:title="@string/battery_style_category" >
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_battery_location_bar"
+            android:title="@string/battery_show_location_title"
+            android:summary="@string/battery_show_location_summary"
+            android:defaultValue="false"/>
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="qs_show_battery_estimate"
             android:title="@string/qs_show_battery_estimate_title"
             android:summary="@string/qs_show_battery_estimate_summary"
