--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -41,6 +41,26 @@
         android:defaultValue="1" />
 
     <PreferenceCategory
+        android:title="@string/notif_settings_title">
+
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+            android:key="lock_screen_custom_notif"
+            android:title="@string/lock_screen_custom_notif_title"
+            android:summary="@string/lock_screen_custom_notif_summary"
+            android:defaultValue="false" />
+
+    <com.dirtyunicorns.support.preferences.SystemSettingSeekBarPreference
+            android:key="lockscreen_max_notif_config"
+            android:title="@string/lockscreen_max_notif_config_title"
+            android:summary="@string/lockscreen_max_notif_config_summary"
+            android:max="3"
+            android:min="1"
+            settings:units=""
+            android:defaultValue="3"
+            android:dependency="lock_screen_custom_notif" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/switch_settings_title" >
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
