--- a/res/layout/cutout_force_fullscreen_layout.xml
+++ b/res/layout/cutout_force_fullscreen_layout.xml
@@ -32,4 +32,12 @@
         android:divider="@null"
         android:fastScrollEnabled="true" />
 
+    <TextView
+        android:id="@+id/user_list_empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/cutout_force_fullscreen_no_apps"
+        android:textSize="18dp"
+        android:visibility="gone" />
 </RelativeLayout>
