--- a/res/xml/navigation_options.xml
+++ b/res/xml/navigation_options.xml
@@ -118,6 +118,22 @@
         </Preference>
 
         <ListPreference
+            android:key="left_vertical_swipe_actions"
+            android:title="@string/left_vertical_swipe_actions_title"
+            android:entries="@array/gestures_actions_entries"
+            android:entryValues="@array/gestures_actions_values"
+            android:defaultValue="0" />
+
+        <Preference
+            android:key="left_vertical_swipe_app_action"
+            android:title="@string/left_vertical_swipe_app_action_title"
+            android:summary="@string/app_picker_dialog_title">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.statusbar.phone.LeftBackVerticalSwipeCustomApp" />
+        </Preference>
+
+        <ListPreference
             android:key="right_swipe_actions"
             android:title="@string/right_swipe_actions_title"
             android:entries="@array/gestures_actions_entries"
@@ -131,6 +147,22 @@
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
                 android:targetClass="com.android.systemui.statusbar.phone.RightBackSwipeCustomApp" />
+        </Preference>
+
+        <ListPreference
+            android:key="right_vertical_swipe_actions"
+            android:title="@string/right_vertical_swipe_actions_title"
+            android:entries="@array/gestures_actions_entries"
+            android:entryValues="@array/gestures_actions_values"
+            android:defaultValue="0" />
+
+        <Preference
+            android:key="right_vertical_swipe_app_action"
+            android:title="@string/right_vertical_swipe_app_action_title"
+            android:summary="@string/app_picker_dialog_title">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.systemui"
+            android:targetClass="com.android.systemui.statusbar.phone.RightBackVerticalSwipeCustomApp" />
         </Preference>
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
