--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -484,6 +484,8 @@
 
     <!-- Status bar logo style -->
     <string-array name="status_bar_logo_style_entries" translatable="false">
+        <item>@string/status_bar_logo_style_corvus</item>
+        <item>@string/status_bar_logo_style_corvus2</item>
         <item>@string/status_bar_logo_style_du</item>
         <item>@string/status_bar_logo_style_android</item>
         <item>@string/status_bar_logo_style_apple</item>
@@ -586,6 +588,8 @@
         <item>47</item>
         <item>48</item>
         <item>49</item>
+        <item>50</item>
+        <item>51</item>
     </string-array>
 
     <!-- QS header image -->
