--- a/res/xml/battery_options.xml
+++ b/res/xml/battery_options.xml
@@ -44,7 +44,7 @@
             android:key="qs_battery_location_bar"
             android:title="@string/battery_show_location_title"
             android:summary="@string/battery_show_location_summary"
-            android:defaultValue="false"/>
+            android:defaultValue="true"/>
 
         <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
             android:key="qs_show_battery_estimate"
